styles.css fix #3 for firefox scrollbar

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body {
     background-size: cover;
     background-color: #5F4B8B;
     margin: 0px;
-    overflow: hidden;
 }
 
 .container {
@@ -19,6 +18,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 #clock {
@@ -81,6 +81,7 @@ body {
     justify-content: center;
     width: 50%;
     margin: 1em 0em;
+    overflow: auto;
 }
 
 @media only screen and (max-width: 960px) {
